--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "playwright": "^1.31.2"
+    "@popperjs/core": "^2.11.6"
   }
 }
