--- a/.github/workflows/measure-performance.yml
+++ b/.github/workflows/measure-performance.yml
@@ -3,7 +3,8 @@ name: Website Performance Test
 on:
   push:
     branches:
-      - development
+      - 'master'
+      - 'development'
 
 jobs:
   performance-test:
