--- a/.github/workflows/lighthouse_report.yml
+++ b/.github/workflows/lighthouse_report.yml
@@ -20,8 +20,7 @@ jobs:
         
     - name: Start Server
       run: |
-        npm start &
-        sleep 10 # Wait for server to start up
+        npm run start
       
     - name: Generate Report
       run: |
