--- a/.github/workflows/website-performance-report.yml
+++ b/.github/workflows/website-performance-report.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: '17.x'
+          node-version: '14.x'
 
       - name: Install dependencies
         run: npm install
@@ -25,10 +25,10 @@ jobs:
         run: npm start & sleep 10
 
       - name: Generate Lighthouse report
-        run: npx lighthouse http://localhost:3000 --output html --output-path test-results/report.html
+        run: npx lighthouse http://localhost:3000 --output=json --output-path=./report.json
 
       - name: Upload report as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: lighthouse-report
-          path: ./test-results
+          path: ./report.json
