--- a/.github/workflows/website-performance-report.yml
+++ b/.github/workflows/website-performance-report.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lighthouse-report
-          path: test-res/
+          path: ./report.json
