Re-testing Lighthouse Performance Test

--- a/.github/workflows/website-performance-report.yml
+++ b/.github/workflows/website-performance-report.yml
@@ -25,10 +25,10 @@ jobs:
         run: npm start & sleep 10
 
       - name: Generate Lighthouse report
-        run: npx lighthouse https://mdellis73.github.io/mywebclass-simulation/ --output=json --output-path=./report.json
+        run: npx lighthouse https://mdellis73.github.io/mywebclass-simulation/ --output=html --output-path=./report.html
 
       - name: Upload report as artifact
         uses: actions/upload-artifact@v2
         with:
           name: lighthouse-report
-          path: ./report.json
+          path: ./report.html
